Fixed font, sizing, and spacing

--- a/src/components/data-grid/DataGrid.css
+++ b/src/components/data-grid/DataGrid.css
@@ -1,14 +1,3 @@
-.page-number-filter {
-    display: flex;
-    flex-direction: row;
-    padding: 0;
-    margin: 0;
-}
-
-.page-number-filter span {
-    font-size: 14px;
-}
-
 .filter {
     color: white;
     padding: 0;
@@ -18,30 +7,152 @@
 }
 
 .filter button {
-    margin: 0;
+    margin: 0 0;
     color: gray;
     background-color: transparent;
     padding: 0;
+
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+
+    align-items: center;
+    vertical-align: middle;
+}
+
+.filter button:hover {
+    color: white;
+    background-color: var(--dark-green);
+    transition: 0.5s;
 }
 
 .filter input {
-    width: 50px;
     padding: 0 2px;
     text-align: center;
+
+    width: 40px;
+    height: 30px;
 }
 
-th {
-    width: 10px;
+.more-information {
+    color: #1571EB;
+    cursor: pointer;
+}
+
+
+.table-header th {
+    padding: 15px !important;
+}
+
+.table-header {
+    font-size: 16px;
+    font-weight: bold;
 }
 
 .data td {
+    border-top: var(--border-main);
+    border-bottom: var(--border-main);
     max-width: 100px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    padding: 10px;
+    padding: 10px 15px;
+
+    vertical-align: middle;
+
+    font-size: 16px;
+    font-weight: 500;
+
+    cursor: pointer;
 }
 
-.navigator td {
+
+.table {
+    margin-bottom: 50px;
+    color: var(--light-green);
+    border: var(--border-main);
+}
+
+.time {
+    font-weight: 100;
+}
+
+.sent-through>* {
+    margin: 8px;
+}
+
+table,
+tr,
+td {
     border: none;
+}
+
+th {
+    width: 10px;
+    border: none;
+}
+
+.date-created {
+    padding: 0;
+    margin: 0;
+}
+
+.page-number-filter {
+    display: flex;
+    flex-direction: row;
+    padding: 0;
+    margin-left: 10px;
+
+    font-size: 16px;
+    /* width: 200px; */
+}
+
+.page-number-filter span {
+    margin-right: 10px;
+}
+
+.navigator {
+    /* display: inline-block; */
+    /* white-space: nowrap; */
+    padding: 10px 15px;
+    overflow: hidden;
+
+    vertical-align: middle;
+
+    font-size: 16px;
+    font-weight: 400;
+    width: 160px;
+}
+
+.navigator select {
+    background-color: white;
+    color: var(--dark-green);
+    border: var(--border-main);
+
+    margin: 0;
+    width: 60px;
+
+    text-align: center;
+}
+
+.navigator span {
+    vertical-align: middle;
+    margin-left: 5px;
+    margin-right: 10px;
+}
+
+.footer {
+    font-size: 16px;
+}
+
+.page-number {
+    padding: 10px 15px;
+    overflow: hidden;
+
+    vertical-align: middle;
+
+    font-size: 16px;
+    font-weight: 400;
+    width: 160px;
+    direction: rtl;
 }
